# podcast-translator

./: parsers.py  pipeline.py  postprocess.py  preprocessor.py  pyproject.toml  run.py  serhii-plokhy-transcript-cs copy.json  serhii-plokhy-transcript-cs.json  serhii-plokhy-transcript.html  serhii-plokhy-transcript.json
model/: conversation.py
